Increased accepted file size for data hub view